--- a/coolse/src/styles/index.css
+++ b/coolse/src/styles/index.css
@@ -1,4 +1,62 @@
+
 .App{
     text-align:center;
-    padding:5%
+    padding:2%;
+}
+
+.Navbar{
+  background-color: #46ACC2;
+  display: flex;
+  padding: 16px;
+  font-family: sans-serif;
+  color: white;
+  justify-content: space-around;
+
+}
+.Navbar__Items{
+    display:flex;
+
+}
+
+.Navbar__Link {
+  padding-right: 2px;
+  margin-right: 120px;
+
+}
+
+
+
+@media only screen and (min-width:768px){
+    .Navbar__Link-toggle{
+        display: none;
+    }
+    .ActiveMode{
+    font-weight: bold;
+    border-bottom:1px solid white;
+}
+
+}
+
+@media only screen and (max-width: 768px) {
+  .Navbar__Items,
+  .Navbar {
+    flex-direction: column;
+  }
+   .Navbar__Items {
+    display:none;
+  }
+  .Navbar__Items--right {
+    margin-left: 0;
+  }
+  .Navbar__ToggleShow {
+    display: flex;
+  }
+  .Navbar__Link-toggle {
+    align-self: flex-end;
+    display: initial;
+    cursor: pointer;
+
+   }
+
+
 }
