--- a/coolse/src/styles/index.css
+++ b/coolse/src/styles/index.css
@@ -10,21 +10,26 @@
   padding: 16px;
   font-family: sans-serif;
   color: white;
-  justify-content: space-around;
+  justify-content: center;
 
 }
 .Navbar__Items{
     display:flex;
-
+    margin-left: 150px;
 }
 
 .Navbar__Link {
   padding-right: 2px;
-  margin-right: 120px;
-
+  color:white;
+  margin-right:120px;
 }
 
-
+.Navbar__Link:hover
+  {
+    color:white;
+    text-decoration:none;
+    cursor:pointer;
+   }
 
 @media only screen and (min-width:768px){
     .Navbar__Link-toggle{
@@ -33,8 +38,7 @@
     .ActiveMode{
     font-weight: bold;
     border-bottom:1px solid white;
-}
-
+    }
 }
 
 @media only screen and (max-width: 768px) {
@@ -57,6 +61,4 @@
     cursor: pointer;
 
    }
-
-
 }
