--- a/coolse/src/styles/index.css
+++ b/coolse/src/styles/index.css
@@ -3,62 +3,94 @@
     text-align:center;
     padding:2%;
 }
-
-.Navbar{
-  background-color: #46ACC2;
-  display: flex;
-  padding: 16px;
-  font-family: sans-serif;
-  color: white;
-  justify-content: center;
-
-}
-.Navbar__Items{
-    display:flex;
-    margin-left: 150px;
+html, body{
+    background-color: azure;
+    margin: 0px auto;
+    padding:0px;
+    font-family: Nunito,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
-.Navbar__Link {
-  padding-right: 2px;
-  color:white;
-  margin-right:120px;
+.container{
+ display:flex;
+  width:100%;
+  padding: 20px;
 }
 
-.Navbar__Link:hover
-  {
+button{
+    border:solid 1px;
+    border-radius: 4px;
+}
+
+.headerContainer{
+    justify-content: space-around;
+    background-color:rgba(0,0,0,.82);
+    list-style-type: none;
+}
+
+.nav_Link > :first-child{
+    text-decoration: none;
     color:white;
-    text-decoration:none;
-    cursor:pointer;
-   }
+}
+
+.nav_Link > :first-child:hover{
+    color:darkgrey;
+}
+
+.activelink{
+    border-bottom: 1px solid white;
+    font-weight: bold;
+}
+
+.burger{
+    color:white;
+}
 
 @media only screen and (min-width:768px){
-    .Navbar__Link-toggle{
-        display: none;
+    .burger{
+        display:none;
     }
-    .ActiveMode{
-    font-weight: bold;
-    border-bottom:1px solid white;
+    .container {
+    max-width: -webkit-fill-available;
+}
+    .searchInputStyle{
+         width:250px;
+        margin-right : 50px;
+    }
+
+
+}
+
+@media only screen and (max-width:768px){
+    .container{
+        flex-direction: column;
+    }
+    .nav_Link{
+        display:none;
+    }
+
+    .Navbar__ToggleShow{
+        display: block;
+    }
+    .burger{
+        align-self: flex-end;
+    }
+    .searchButtonStyle{
+        margin-top:20px;
     }
 }
 
-@media only screen and (max-width: 768px) {
-  .Navbar__Items,
-  .Navbar {
-    flex-direction: column;
-  }
-   .Navbar__Items {
-    display:none;
-  }
-  .Navbar__Items--right {
-    margin-left: 0;
-  }
-  .Navbar__ToggleShow {
-    display: flex;
-  }
-  .Navbar__Link-toggle {
-    align-self: flex-end;
-    display: initial;
-    cursor: pointer;
 
-   }
+/* Search Component style */
+.searchLabelStyle{
+            margin-Right : 5px;
+            font-weight:bold;
+            color:rgba(0,0,0,.82)
+}
+
+
+.searchInputStyle{
+
+     border-radius: 5px;
+     border:solid 1px grey;
+
 }
