--- a/coolse/src/styles/index.css
+++ b/coolse/src/styles/index.css
@@ -94,3 +94,33 @@ button{
      border:solid 1px grey;
 
 }
+
+/* Recpipe list style */
+
+.Recipelist_Container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.Recipelist_Recipe{
+    position: relative;
+    text-align: center;
+    min-width: 0;
+    margin: 5px;
+}
+
+.Recipelist_img{
+    width: 450px;
+   max-width: 100%; 
+   max-height: 450px;
+}
+.Recipe_name {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 1px #030303;
+  }
+  
